# SlotMachine

./: README.md  SlotMachine  build.sh  clean.sh
src/: CMakeLists.txt
src/GUI/desktop/: Controller.cpp  Controller.hpp  View.cpp  View.hpp  main.cpp
src/backend/: Drum.cpp  Drum.hpp  Drums.cpp  Drums.hpp  Figure.cpp  Figure.hpp  ScoreManager.cpp  ScoreManager.hpp  SlotMachine.cpp  SlotMachine.hpp  SlotMachineInfo.hpp
